<resources>
    <string name="app_name">daycarat</string>



    <string name="title_login">데이캐럿에서\n내 경험들을\n발굴하고 다듬어요</string>
    <string name="title_agreement">약관에 동의해주세요</string>
    <string name="des_agreement_total">전체 약관에 동의합니다.</string>
    <string name="des_agreement1">서비스 이용약관 동의(필수)</string>
    <string name="des_agreement2">만 14세 이상입니다.(필수)</string>
    <string name="des_agreement3">개인정보 처리방침 동의(필수)</string>
    <string name="des_agreement_focus">보기</string>
    <string name="start_agreement">동의하고 시작하기</string>

    <string name="title_introduce1">간편하게 기록하는\n내 커리어 경험</string>
    <string name="title_introduce2">경험들을 다듬어\n보석으로</string>
    <string name="title_introduce3">알림을 통해 내 경험들\n돌아보는 습관 기르기</string>
    <string name="close_introduce">데이캐럿으로 커리어 관리 시작하기</string>

    <string name="title_join1">앞으로 어떻게 불러드릴까요?</string>
    <string name="des_join1">데이캐럿에서 사용할 닉네임을 설정해주세요.</string>
    <string name="des_join_hint">입력해주세요.</string>


    <string-array name="des_datas">
        <item>기획/전략</item>
        <item>IT 개발/데이터</item>
        <item>디자인</item>
        <item>회계/세무/재무</item>
        <item>마케팅/홍보/조사</item>
    </string-array>

    <string-array name="advantage_datas">
        <item>#아이디어 뱅크</item>
        <item>#시간관리 능통</item>
        <item>#소통왕</item>
        <item>#실무경험 보유</item>
        <item>#친화력 보장</item>
        <item>#추진력갑</item>
        <item>#리더십 보유</item>
        <item>#논리력갑</item>
    </string-array>


    <string name="next">다음으로</string>
    <string name="skip">건너뛰기</string>

    <string name="job_title">희망하는 직군 분야를 알려주세요</string>
    <string name="job_des">선택하신 직군에 따라\n에피소드 키워드를 추천드려요</string>
    <string name="advantage_title">내가 생각하는 나의 강점은?</string>
    <string name="advantage_des">선택한 해당 강점을\n더욱 특화할 수 있도록 도울게요</string>


    <string name="join_finish_title">데이캐럿을 사용할 준비가 되었어요!</string>
    <string name="join_finish_text">데이캐럿과 함께\n하루하루 보석을 캐고 다듬어 나가요!</string>
    <string name="join_finish_close">메인 홈으로 이동</string>


    <string name="home_user_title">%s님,\n새로운 에피소드를 캐볼까요</string>
    <string name="home_title">이번달\n나의 에피소드</string>
    <string name="home_recently_episode_title">최근 에피소드</string>
    <string name="home_recently_episode_empty_title">아직 저장한 에피소드가 없어요</string>
    <string name="home_recently_episode_empty_des">에피소드를 저장하고 나만의 보석을 찾아보세요</string>
    <string name="home_recently_episode_empty_btn">에피소드 추가하기</string>
    <string name="home_des_count">개</string>
    <string name="home_ep_des">바로 활용 가능한\n내 에피소드들</string>
    <string name="home_ai_des">AI로 더 쉽게\n작성하는 자소서</string>
    <string name="home_banner_des">데이캐럿으로\n취업준비 시작하기</string>
    <string name="home_news_title">데이캐럿 뉴스</string>
    <string name="home_news_des">뉴스 설명</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_episode">에피소드</string>
    <string name="navigation_diamond">보석함</string>
    <string name="navigation_profile">마이페이지</string>
    <string name="hint">내용을 입력해주세요</string>
    <string name="episode_title">에피소드 입력</string>
    <string name="episode_save">저장</string>
    <string name="episode_header_title">제목&#160;</string>
    <string name="episode_header_date">날짜</string>
    <string name="episode_header_tag">활동 태그</string>
    <string name="episode_item_title">작성항목&#160;</string>


    <string name="episode_item_add">작성항목 추가</string>
    <string name="episode_item_hint">작성항목 선택</string>
    <string name="dialog_episode_tag_add">활동 태그 추가</string>
    <string name="dialog_episode_tag_add_hint">활동명을 입력해주세요</string>
    <string name="dialog_episode_tag_add_btn">추가하기</string>
    <string name="noti_empty_des">아직 설정한 기록 알림이 없어요</string>
    <string name="noti_title">알림</string>
    <string name="noti_des">기록해야 하는 중요한 활이 있다면\n설정하고 알림을 받아보세요.</string>

    <string-array name="episode_header_datas">
        <item>자유롭게 작성</item>
        <item>배운 점</item>
        <item>아쉬운 점</item>
        <item>보완할 점</item>
    </string-array>


    <string-array name="week_string_array">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>


    <string name="episode_top_title">%d개의\n원석이 있어요</string>
    <string name="episode_top_des">사소한 에피소드도 다시보면\n자소서에서 활용할 수 있는 보석 같은 경험일 수 있어요</string>
    <string name="episode_type_activity">활동별</string>
    <string name="episode_type_day">날짜별</string>

    <string-array name="des_years">
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
    </string-array>

    <string name="soara_content1">어떤 상황 또는 어떤 문제였나요?</string>
    <string name="soara_des1">해당 에피소드의 상황을 구체적으로 적어주세요</string>
    <string name="soara_content2">당시 무엇을 성취하는 것이 목표였나요?</string>
    <string name="soara_des2">당시 상황이나 문제를 해결하기 위해 세운 목표를 구체적으로 적어주세요</string>
    <string name="soara_content3">목표를 위해 구체적으로 어떤 행동을 하였나요?</string>
    <string name="soara_des3">목표를 달성하기 위해 노력한 부분들을 자세히 적어주세요</string>
    <string name="soara_content4">그로 인해 어떤 결과가 발생했나요?</string>
    <string name="soara_des4">앞서 노력한 행동들로 인해 나타난 결과를 구체적으로 작성해주세요</string>
    <string name="soara_content5">그 결과가 내게 미친 영향은 무엇인가요?</string>
    <string name="soara_des5">해당 에피소드를 통해 얻게 된 역량(성과)이나 느꼈던 점을 구체적으로 적어주세요</string>
    <!--    <string name="home_ai_des"></string>-->
</resources>