<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_wellcome"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_finish_title"
            android:id="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/des"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_finish_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:text="@string/join_finish_close"
            app:layout_constraintTop_toBottomOf="@id/des"
            android:layout_margin="20dp"
            android:id="@+id/next_btn"
            android:background="@drawable/selector_main_theme"
     />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
