<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_join1"
            android:id="@+id/title"
            android:layout_marginTop="56dp"
            android:layout_marginStart="16dp"
            style="@style/sh1"
            android:textColor="@color/gray_scale_800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/des_join1"
            android:id="@+id/text_des"
            style="@style/b1"
            android:textColor="@color/gray_scale_600"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/text_des"
            android:layout_marginTop="88dp"
            android:id="@+id/edit"
            style="@style/b1"
            android:textColorHint="@color/gray_scale_400"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLength="10"
            android:hint="@string/des_join_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bg_edit_text" />

        <TextView
            android:id="@+id/text_count"
            android:text ="0/10"
            android:layout_marginTop="8dp"
            style="@style/b1"
            android:textColor="@color/gray_scale_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/edit"
            app:layout_constraintTop_toBottomOf="@id/edit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
