<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="172.5dp"
            android:src="@drawable/bg_wellcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/sh2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/join_finish_title"
            android:textColor="@color/gray_scale_800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main" />

        <TextView
            android:id="@+id/des"
            style="@style/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/join_finish_text"
            android:textColor="@color/gray_scale_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            style="@style/sh6"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="72dp"
            android:background="@drawable/selector_main_theme"

            android:text="@string/join_finish_close"
            android:textColor="@color/selector_close_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/des" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
