<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:id="@+id/field_main"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:background="@color/main_50"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/field_top">

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gray_scale_900"
                    android:layout_marginTop="68.5dp"
                    style="@style/h5"
                    android:text="@string/episode_top_title"
                    android:layout_width="wrap_content"
                    android:id="@+id/text_total_count"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/episode_top_des"
                    android:textColor="@color/gray_scale_600"
                    android:layout_marginTop="12dp"
                    style="@style/b3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_total_count"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="20dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_top"
                android:background="@drawable/bg_home_white_field">

                <com.google.android.material.chip.ChipGroup
                    app:layout_constraintTop_toTopOf="parent"
                    app:singleSelection="true"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        app:chipBackgroundColor="@color/chip_episode_tag_bg"
                        app:chipStrokeColor="@color/chip_episode_tag_stroke_color"
                        app:chipStrokeWidth="1dp"
                        android:id="@+id/chip_activity"
                        app:checkedIconVisible="false"
                        android:checkable="true"
                        android:enabled="true"
                        android:checked="true"
                        android:text="@string/episode_type_activity"
                        android:textColor="@color/chip_episode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.chip.Chip
                        app:chipBackgroundColor="@color/chip_episode_tag_bg"
                        app:chipStrokeColor="@color/chip_episode_tag_stroke_color"
                        app:chipStrokeWidth="1dp"
                        app:checkedIconVisible="false"
                        android:id="@+id/chip_day"
                        android:checkable="true"
                        android:enabled="true"
                        android:text="@string/episode_type_day"
                        android:textColor="@color/chip_episode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </com.google.android.material.chip.ChipGroup>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_year"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    app:layout_constraintTop_toBottomOf="@id/chip_group"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_spinner_dropdown"
                    android:layout_gravity="end"
                    android:popupBackground="@drawable/bg_spinner_dropdown"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginBottom="8dp"
                    android:dropDownVerticalOffset="56dp"
                    android:layout_marginEnd="16dp"
                    android:spinnerMode="dropdown"
                    android:text="@string/episode_item_hint"
                    tools:background="@drawable/bg_spinner" />


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="11dp"
                    app:spanCount="2"
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/recycler_episode"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_episode_card"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_year"
                    android:paddingStart="11dp"/>

            </LinearLayout>


        </LinearLayout>



    </ScrollView>

</layout>
